# entropyicons

./: .env  .gitignore  .travis.yml  Cargo.toml  README.md  Rocket.toml  db_setup.sql  test_setup.sh
migrations/20171102181527_create_posts/: up.sql
migrations/20171119034244_imageset/: down.sql  up.sql
src/: db.rs  images.rs  lib.rs  main.rs  models.rs  server.rs
src/image_generators/: images.rs  mod.rs
static/js/: app.js
static/styles/: freelancer.css  style.css
templates/: 404.html.tera  500.html.tera  base.html.tera  index.html.tera
tests/: integration_test.rs
