[package]
name = "rust_360"
version = "0.1.0"
authors = ["Martin Wallace <martin.v.wallace@ieee.org>"]

[dependencies]
diesel = { version = "0.16.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"
clippy = { version = "*", optional = true}
rocket = "*"
rocket_codegen = "*"
rand = "0.3"

[features]
default = []
