[package]
name = "rust_360"
version = "0.1.0"
authors = ["Martin Wallace <martin.v.wallace@ieee.org>"]

[dependencies]
diesel = { version = "0.16.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.10.*"
clippy = { version = "*", optional = true}
rocket = "*"
rocket_codegen = "*"
rand = "0.3"
image = "*"
tera = "0.10"
serde_json = "*"
serde_derive = "*"

[dependencies.rocket_contrib]
default-features = false
features = ["tera_templates"]


[features]
default = []
